--- a/FE/frontend/index.html
+++ b/FE/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="64x100" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prescripto</title>
+    <title>Hust Dental Clinic</title>
   </head>
   <body >
     <div id="root" ></div>
